# starkshifts

./: .gitignore  LICENSE  README.md  basis.py  pyproject.toml  requirements_dev.txt  setup.cfg  test_basis.py  tox.ini
src/starkshifts/: basis.py
tests/: test_basis.py
