[metadata]
name = starkshifts
description = calculates stark shifts 
author = Ivneet Bhangoo, Luke Brown
license = MIT
license_file = LICENSE 
classifiers = Programming Language :: Python :: 3 :: Only

[options]
packages = 
    starkshifts
install_requires = 
    numpy >= 1.26.4
python_requires = >= 3.6
package_dir =
    =src
zip_safe = true